# pico_eink_painter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSE.txt  eink_photo.c  main.c
demo/: demo_func.c  demo_func.h
dev_config/: epaper_config.c  sd_config.c
lib/: EPD_4in0e.c
lib/epaper_driver/: CMakeLists.txt  EPD_4in0e.c
lib/epaper_driver/include/: DEV_Config.h  EPD_4in0e.h
lib/waveshare_4in0e_driver/: CMakeLists.txt  EPD_4in0e.c  common_op.c  epd.c
lib/waveshare_4in0e_driver/include/: EPD_4in0e.h  common_op.h  defines.h  epd.h
lib/waveshare_rp2350_photo_painter/: CMakeLists.txt  common_op.c  epd.c  pp_rtc.c
lib/waveshare_rp2350_photo_painter/include/: common_op.h  defines.h  epd.h  pp_rtc.h
src/: eink_photo.c  eink_photo_init.c  sd_config.c
src/include/: eink_photo.h  eink_photo_init.h
